# food-integrator

./: .gitignore  README.md  pyproject.toml  requeriments  requeriments.txt
docker/: .env.example  Dockerfile  docker-compose.yml  dockerignore
docker/postgres/: Dockerfile  postgresql.conf
docker/postgres/initdb/: 00_create_metabase_db.sql  00_extensions.sql  01_merchants.sql  02_operation_days.sql  03_webhook_inbox.sql  04_orders.sql  05_merchant_credentials.sql  05_order_events.sql  06_operation_snapshots.sql  07_views.sql  08_indexes.sql  09_order_relations.sql  10_sync_jobs.sql
scripts/: backfill.py  recover_shift.py  test_suite.sh
src/: config.py  main.py
src/api/: dependencies.py
src/api/routes/: admin.py  webhooks.py
src/core/: logger.py
src/core/models/: webhook.py
src/core/services/: geo_service.py  historical_sync_service.py  inbox_processor.py  order_enrichment.py  reconciliation_service.py  snapshot_service.py
src/infrastructure/cache/: redis_client.py
src/infrastructure/db/: connection.py
src/tasks/: scheduler.py  worker.py
src/tests/integration/: test_webhook.py
src/tests/manual/: run_all_etapa4.sh  test_e2e_lifecycle.sh  test_enrichment.sh  test_geo.py  test_load.sh  test_security.sh
