[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cardapioweb-integrator"
version = "0.1.0"
description = "Integração de webhooks Cardapioweb para analytics operacional"
requires-python = ">=3.11"
authors = [{name = "Mokk Team"}]

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "httpx==0.25.2",
    "sqlalchemy[asyncio]==2.0.23",
    "asyncpg==0.29.0",
    "redis==5.0.1",
    "pydantic==2.5.2",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "cryptography==41.0.7",
    "email-validator==2.1.0.post1",
    "structlog==23.2.0",
    "APScheduler==3.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
    # LINTERS - Ruff substitui black + isort + flake8
    "ruff==0.1.6",
    "mypy==1.7.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# ============================================
# CONFIGURAÇÃO DO RUFF (Linter + Formatter)
# ============================================
[tool.ruff]
target-version = "py311"  # Python 3.11
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # Erros pycodestyle
    "F",   # Pyflakes
    "I",   # Imports (isort)
    "N",   # Nomes de variáveis PEP8
    "W",   # Warnings
    "UP",  # Upgrade para Python moderno
    "B",   # Bugbear (possíveis bugs)
    "C4",  # Comprehensions
    "SIM", # Simplificações
]
ignore = ["E501"]  # Line too long (já temos line-length = 88)

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ============================================
# CONFIGURAÇÃO DO MYPY (Type Checker)
# ============================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["redis.*", "apscheduler.*"]
ignore_missing_imports = true